FIRMWARE/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:33:10 **** Incremental Build of configuration Debug for project Tire_Temperature_Sensor ****
make -j12 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m4 -std=c++20 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4P5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -Wextra -pedantic -Wswitch-default -Wswitch-enum -Wconversion -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Drivers/CMSIS/Include/core_cm4.h:1955,
                 from ../Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4p5xx.h:170,
                 from ../Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4xx.h:159,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h:29,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32l4xx_hal_conf.h:258,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.cpp:20:
../Drivers/CMSIS/Include/mpu_armv7.h: In function 'void ARM_MPU_Enable(uint32_t)':
../Drivers/CMSIS/Include/mpu_armv7.h:195:14: warning: compound assignment with 'volatile'-qualified left operand is deprecated [-Wvolatile]
  195 |   SCB->SHCSR |= SCB_SHCSR_MEMFAULTENA_Msk;
../Drivers/CMSIS/Include/mpu_armv7.h: In function 'void ARM_MPU_Disable()':
../Drivers/CMSIS/Include/mpu_armv7.h:207:14: warning: compound assignment with 'volatile'-qualified left operand is deprecated [-Wvolatile]
  207 |   SCB->SHCSR &= ~SCB_SHCSR_MEMFAULTENA_Msk;
../Drivers/CMSIS/Include/mpu_armv7.h:209:14: warning: compound assignment with 'volatile'-qualified left operand is deprecated [-Wvolatile]
  209 |   MPU->CTRL  &= ~MPU_CTRL_ENABLE_Msk;
../Core/Src/main.cpp: In function 'int main()':
../Core/Src/main.cpp:176:4: error: 'PUTM_CAN' has not been declared
  176 |    PUTM_CAN::Apps_main apps{
      |    ^~~~~~~~
../Core/Src/main.cpp:179:26: error: 'PUTM_CAN' has not been declared
  179 |    auto tts_main_frame = PUTM_CAN::Can_tx_message<PUTM_CAN::Apps_main>(apps, PUTM_CAN::can_tx_header_APPS_MAIN);
      |                          ^~~~~~~~
../Core/Src/main.cpp:179:51: error: 'PUTM_CAN' has not been declared
  179 |    auto tts_main_frame = PUTM_CAN::Can_tx_message<PUTM_CAN::Apps_main>(apps, PUTM_CAN::can_tx_header_APPS_MAIN);
      |                                                   ^~~~~~~~
../Core/Src/main.cpp:179:72: error: 'apps' was not declared in this scope
  179 |    auto tts_main_frame = PUTM_CAN::Can_tx_message<PUTM_CAN::Apps_main>(apps, PUTM_CAN::can_tx_header_APPS_MAIN);
      |                                                                        ^~~~
../Core/Src/main.cpp:179:78: error: 'PUTM_CAN' has not been declared
  179 |    auto tts_main_frame = PUTM_CAN::Can_tx_message<PUTM_CAN::Apps_main>(apps, PUTM_CAN::can_tx_header_APPS_MAIN);
      |                                                                              ^~~~~~~~
../Core/Src/main.cpp: In function 'void SystemClock_Config()':
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::HSEState' [-Wmissing-field-initializers]
  222 |   RCC_OscInitTypeDef RCC_OscInitStruct = {0};
      |                                            ^
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::LSEState' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::HSIState' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::HSICalibrationValue' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::LSIState' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::LSIDiv' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::MSIState' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::MSICalibrationValue' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::MSIClockRange' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::HSI48State' [-Wmissing-field-initializers]
../Core/Src/main.cpp:222:44: warning: missing initializer for member 'RCC_OscInitTypeDef::PLL' [-Wmissing-field-initializers]
../Core/Src/main.cpp:223:44: warning: missing initializer for member 'RCC_ClkInitTypeDef::SYSCLKSource' [-Wmissing-field-initializers]
  223 |   RCC_ClkInitTypeDef RCC_ClkInitStruct = {0};
      |                                            ^
../Core/Src/main.cpp:223:44: warning: missing initializer for member 'RCC_ClkInitTypeDef::AHBCLKDivider' [-Wmissing-field-initializers]
../Core/Src/main.cpp:223:44: warning: missing initializer for member 'RCC_ClkInitTypeDef::APB1CLKDivider' [-Wmissing-field-initializers]
../Core/Src/main.cpp:223:44: warning: missing initializer for member 'RCC_ClkInitTypeDef::APB2CLKDivider' [-Wmissing-field-initializers]
make: *** [Core/Src/subdir.mk:53: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
